  * GUI updates for the Calendar
  * Grouped stickies can now be moved to a different project by editing the group
  * Templates can now have negative due date offsets
  * Daily Stickies Due now groups the stickies by project
  * Sticky Completion emails now list other stickies in the same group
  * When a viewing a project page, the menu now contains links to that project's templates and frames

* Bug Fix
  * Daily stickies due email fixed to include weekday for items past due
  * Creating a sticky that's already marked as completed now only sends out a "sticky completed" email

== 0.12.1

* Bug Fix
  * Project Viewers are now correctly redirected to the sticky show page from the calendar view

== 0.12.0

* Enhancements
  * Emails for Stickies generated by Templates are now sent out in a single email as opposed to an email per sticky
  * Sticky Due Dates are now included in emails
  * Stickies that are generated together from a template are now grouped together
  * Groups of stickies can be deleted, and can have a general group description
  * Using Contour 0.7.0 with Menu enhancements and broader browser compatibility, specifically IE7+

* Bug Fix
  * New stickies that are created and already marked as completed now correctly set a Sticky ID in the email

== 0.11.1

* Bug Fix
  * Rake task now correctly sends out reminder emails (except weekend)

== 0.11.0

* Enhancements
  * Adding support for templates
    * Templates define a series of stickies
    * Once created a template can Generate Stickies for the project with:
      * Due Date (+1.day, +2.weeks, +5.months)
      * Assigned user
      * Additional information attached to each sticky
  * Calendar View is now available for Stickies with a Due Date
    * New Stickies with Due Date can be created directly from Due Date calendar by hovering over the date and clicking the new sticky icon
  * Emails are sent out to inform users if a sticky assigned to them is due that day or is past due