@@ -19,6 +19,20 @@ class GroupsController < ApplicationController
     @group = current_user.all_groups.find_by_id(params[:id])
     redirect_to root_path unless @group
   end
+
+  def create
+    params[:initial_due_date] = begin Date.strptime(params[:initial_due_date], "%m/%d/%Y") rescue Date.today end
+    @template = current_user.all_templates.find_by_id(params[:template_id])
+    @frame = (@template ? @template.project.frames.find_by_id(params[:frame_id]) : nil)
+    @frame_id = @frame.id if @frame
+    frame_name = (@frame ? @frame.name + ' - ' + @frame.short_time : 'Backlog')
+    if @template
+      @group = @template.generate_stickies!(current_user, @frame_id, params[:initial_due_date], params[:additional_text])
+      redirect_to @group, notice: @group.stickies.size.to_s + ' ' + ((@group.stickies.size == 1) ? 'sticky' : 'stickies') + " successfully created and added to #{frame_name}."
+    else
+      redirect_to root_path
+    end  
+  end
   
   # def create
   #   @group = current_user.groups.new(params[:group])
