@@ -1,20 +1,20 @@
 class TemplatesController < ApplicationController
   before_filter :authenticate_user!
 
-  def generate_stickies
-    params[:initial_due_date] = begin Date.strptime(params[:initial_due_date], "%m/%d/%Y") rescue Date.today end
-    @template = current_user.all_templates.find_by_id(params[:id])
-    @frame = (@template ? @template.project.frames.find_by_id(params[:frame_id]) : nil)
-    @frame_id = @frame.id if @frame
-    frame_name = (@frame ? @frame.name + ' - ' + @frame.short_time : 'Backlog')
-    if @template
-      @group = @template.generate_stickies!(current_user, @frame_id, params[:initial_due_date], params[:additional_text])
-      redirect_to @group, notice: @group.stickies.size.to_s + ' ' + ((@group.stickies.size == 1) ? 'sticky' : 'stickies') + " successfully created and added to #{frame_name}."
-      # redirect_to @template, notice: @template.items.size.to_s + ' ' + ((@template.items.size == 1) ? 'sticky' : 'stickies') + " successfully created and added to #{frame_name}."
-    else
-      redirect_to root_path
-    end
-  end
+  # def generate_stickies
+  #   params[:initial_due_date] = begin Date.strptime(params[:initial_due_date], "%m/%d/%Y") rescue Date.today end
+  #   @template = current_user.all_templates.find_by_id(params[:id])
+  #   @frame = (@template ? @template.project.frames.find_by_id(params[:frame_id]) : nil)
+  #   @frame_id = @frame.id if @frame
+  #   frame_name = (@frame ? @frame.name + ' - ' + @frame.short_time : 'Backlog')
+  #   if @template
+  #     @group = @template.generate_stickies!(current_user, @frame_id, params[:initial_due_date], params[:additional_text])
+  #     redirect_to @group, notice: @group.stickies.size.to_s + ' ' + ((@group.stickies.size == 1) ? 'sticky' : 'stickies') + " successfully created and added to #{frame_name}."
+  #     # redirect_to @template, notice: @template.items.size.to_s + ' ' + ((@template.items.size == 1) ? 'sticky' : 'stickies') + " successfully created and added to #{frame_name}."
+  #   else
+  #     redirect_to root_path
+  #   end
+  # end
 
   def add_item
     @template = current_user.templates.new(params[:template])
@@ -41,7 +41,7 @@ class TemplatesController < ApplicationController
   end
 
   def new
-    @template = current_user.all_templates.new(params[:template])
+    @template = current_user.templates.new(params[:template])
   end
   
   def edit
