@@ -33,10 +33,10 @@ class Template < ActiveRecord::Base
   end
   
   def generate_stickies!(current_user, frame_id, initial_date = Date.today, additional_text = nil)
-    group = current_user.all_groups.create({project_id: self.project_id, description: additional_text, template_id: self.id})
+    group = current_user.groups.create({ project_id: self.project_id, description: additional_text, template_id: self.id })
     self.items.each_with_index do |item|
       item = item.symbolize_keys
-      current_user.stickies.create({group_id: group.id, project_id: self.project_id, frame_id: frame_id, owner_id: item[:owner_id], description: item[:description].to_s, status: 'ongoing', due_date: (initial_date == nil ? nil : initial_date + item[:interval].send(item[:units])) })
+      current_user.stickies.create({ group_id: group.id, project_id: self.project_id, frame_id: frame_id, owner_id: item[:owner_id], description: item[:description].to_s, status: 'ongoing', due_date: (initial_date == nil ? nil : initial_date + item[:interval].send(item[:units])) })
     end
     group.reload
     
