@@ -76,7 +76,12 @@
     <%= link_to_function image_tag('contour/tick.png', :alt => '') + (@sticky.new_record? ? "Create Sticky" : "Update Sticky"), "$('##{form_name}').submit();", :class => "button positive" %>
     <%= cancel %>
     <% if not @sticky.new_record? and current_user.all_stickies.include?(@sticky)  %>
-      <%= link_to image_tag('contour/delete.png', :alt => '') + "Delete Sticky", sticky_path(@sticky, from_calendar: params[:from_calendar].to_i), :confirm => "Are you sure you want to delete Sticky #{@sticky.name}?", :method => :delete, :class => 'button negative' %>
+      <% if @sticky.group %>
+        <%= link_to_function image_tag('contour/delete.png', alt: '') + "Delete Sticky", "$('#delete-sticky-dialog_#{@sticky.id}').dialog('open'); return false;", class: 'button negative' %>
+        <%= render partial: 'delete_sticky_dialog', locals: { sticky: @sticky } %>
+      <% else %>
+        <%= link_to image_tag('contour/delete.png', :alt => '') + "Delete Sticky", sticky_path(@sticky, from_calendar: params[:from_calendar].to_i), :confirm => "Are you sure you want to delete Sticky #{@sticky.name}?", :method => :delete, :class => 'button negative' %>
+      <% end %>
     <% end %>
 		<br />
   </div>
