@@ -1,0 +1,1 @@
+$("#stickies").html("<%= escape_javascript(render("stickies")) %>");
