@@ -9,7 +9,12 @@
 </h1>
 <% if current_user.all_stickies.include?(@sticky)  %>
   <%= link_to image_tag('contour/edit.png', :alt => '') + "Edit Sticky", edit_sticky_path(@sticky), :class => 'button' %>
-  <%= link_to image_tag('contour/delete.png', :alt => '') + "Delete Sticky", @sticky, :confirm => "Are you sure you want to delete Sticky #{@sticky.name}?", :method => :delete, :class => 'button negative' %>
+  <% if @sticky.group %>
+    <%= link_to_function image_tag('contour/delete.png', alt: '') + "Delete Sticky", "$('#delete-sticky-dialog_#{@sticky.id}').dialog('open'); return false;", class: 'button negative' %>
+    <%= render partial: 'delete_sticky_dialog', locals: { sticky: @sticky } %>
+  <% else %>
+    <%= link_to image_tag('contour/delete.png', :alt => '') + "Delete Sticky", @sticky, :confirm => "Are you sure you want to delete Sticky #{@sticky.name}?", :method => :delete, :class => 'button negative' %>
+  <% end %>
 <% end %>
 <%= link_to image_tag('contour/mydocuments.png', :alt => '') + "View All Stickies", stickies_path, :class => 'button' %>
 
