@@ -3,7 +3,7 @@ Hello <%= @recipient.first_name %>,<br />
 <%= @group.user.name %> added the following Group <%= link_to @group.name, "#{SITE_URL}/groups/#{@group.id}" %> of <%= pluralize @group.stickies.size, 'Sticky' %> to Project <%= link_to @group.template.project.name, "#{SITE_URL}/projects/#{@group.template.project.id}" %>.<br />
 <br />
 <ul>
-<% @group.stickies.each do |sticky| %>
+<% @group.stickies.order(:due_date).each do |sticky| %>
 <li><%= render partial: 'sticky_line_item', :locals => { :sticky => sticky } %></li>
 <% end %>
 </ul>
