@@ -7,7 +7,7 @@ Hello <%= @recipient.first_name %>,<br />
 <% if @sticky.group %>
   This sticky is part of Group <%= link_to @sticky.group.name, "#{SITE_URL}/groups/#{@sticky.group.id}" %>.
   <ul>
-    <% @sticky.group.stickies.each do |sticky| %>
+    <% @sticky.group.stickies.order(:due_date).each do |sticky| %>
     <li><%= render partial: 'sticky_line_item', :locals => { :sticky => sticky } %></li>
     <% end %>
   </ul>
