@@ -11,3 +11,9 @@ two:
   project: one
   name: A Single Template 1 Week Reminder
   items: [{description: 'Reminder in a Week', interval: 1, units: 'weeks'}]
+
+three:
+  user: valid
+  project: one
+  name: Five Items
+  items: [{description: 'Task A', interval: 0, units: 'days'},{description: 'Task B', interval: 1, units: 'days'},{description: 'Task C', interval: 2, units: 'days'},{description: 'Task D', interval: 3, units: 'days'},{description: 'Task E', interval: 4, units: 'days'},{description: 'Task F', interval: 5, units: 'days'}]
