@@ -16,14 +16,33 @@ class GroupsControllerTest < ActionController::TestCase
   #   get :new
   #   assert_response :success
   # end
-  # 
-  # test "should create group" do
-  #   assert_difference('Group.count') do
-  #     post :create, group: @group.attributes
-  #   end
-  # 
-  #   assert_redirected_to group_path(assigns(:group))
-  # end
+  
+  test "should create group and generate stickies" do
+    assert_difference('Sticky.count', templates(:one).items.size) do
+      assert_difference('Group.count') do
+        post :create, template_id: templates(:one).to_param, frame_id: frames(:one).to_param
+      end
+    end
+    assert_not_nil assigns(:template)
+    assert_not_nil assigns(:group)
+    assert_equal templates(:one).items.size, assigns(:group).stickies.size
+    assert_equal assigns(:frame), frames(:one)
+    assert_equal assigns(:frame_id).to_s, frames(:one).to_param
+    assert_equal assigns(:group).user_id.to_s, users(:valid).to_param
+    assert_redirected_to group_path(assigns(:group))
+  end
+
+  test "should not create group and generate stickies for invalid template id" do
+    assert_difference('Sticky.count', 0) do
+      assert_difference('Group.count', 0) do
+        post :create, template_id: -1, frame_id: frames(:one).to_param
+      end
+    end
+    assert_nil assigns(:template)
+    assert_nil assigns(:frame)
+    assert_nil assigns(:frame_id)
+    assert_redirected_to root_path
+  end
   
   test "should show group" do
     get :show, id: @group.to_param
