@@ -6,41 +6,42 @@ class TemplatesControllerTest < ActionController::TestCase
     @template = templates(:one)
   end
 
-  test "should generate stickies" do
-    assert_difference('Sticky.count', @template.items.size) do
-      post :generate_stickies, id: @template.to_param, frame_id: frames(:one).to_param
-    end
-    assert_not_nil assigns(:template)
-    assert_equal assigns(:frame), frames(:one)
-    assert_equal assigns(:frame_id).to_s, frames(:one).to_param
-    assert_redirected_to assigns(:group)
-  end
-
-  test "should generate stickies and place them in a group" do
-    assert_difference('Sticky.count', @template.items.size) do
-      assert_difference('Group.count') do
-        post :generate_stickies, id: @template.to_param, frame_id: frames(:one).to_param
-      end
-    end
-    assert_not_nil assigns(:template)
-    assert_not_nil assigns(:group)
-    assert_equal @template.items.size, assigns(:group).stickies.size
-    assert_equal assigns(:frame), frames(:one)
-    assert_equal assigns(:frame_id).to_s, frames(:one).to_param
-    assert_redirected_to assigns(:group)
-  end
-
-  test "should not generate stickies for invalid id" do
-    assert_difference('Sticky.count', 0) do
-      assert_difference('Group.count', 0) do
-        post :generate_stickies, id: -1, frame_id: frames(:one).to_param
-      end
-    end
-    assert_nil assigns(:template)
-    assert_nil assigns(:frame)
-    assert_nil assigns(:frame_id)
-    assert_redirected_to root_path
-  end
+  # TODO: Remove
+  # test "should generate stickies" do
+  #   assert_difference('Sticky.count', @template.items.size) do
+  #     post :generate_stickies, id: @template.to_param, frame_id: frames(:one).to_param
+  #   end
+  #   assert_not_nil assigns(:template)
+  #   assert_equal assigns(:frame), frames(:one)
+  #   assert_equal assigns(:frame_id).to_s, frames(:one).to_param
+  #   assert_redirected_to assigns(:group)
+  # end
+  # 
+  # test "should generate stickies and place them in a group" do
+  #   assert_difference('Sticky.count', @template.items.size) do
+  #     assert_difference('Group.count') do
+  #       post :generate_stickies, id: @template.to_param, frame_id: frames(:one).to_param
+  #     end
+  #   end
+  #   assert_not_nil assigns(:template)
+  #   assert_not_nil assigns(:group)
+  #   assert_equal @template.items.size, assigns(:group).stickies.size
+  #   assert_equal assigns(:frame), frames(:one)
+  #   assert_equal assigns(:frame_id).to_s, frames(:one).to_param
+  #   assert_redirected_to assigns(:group)
+  # end
+  # 
+  # test "should not generate stickies for invalid id" do
+  #   assert_difference('Sticky.count', 0) do
+  #     assert_difference('Group.count', 0) do
+  #       post :generate_stickies, id: -1, frame_id: frames(:one).to_param
+  #     end
+  #   end
+  #   assert_nil assigns(:template)
+  #   assert_nil assigns(:frame)
+  #   assert_nil assigns(:frame_id)
+  #   assert_redirected_to root_path
+  # end
 
   test "should add item" do
     post :add_item, template: @template.attributes, format: 'js'
