@@ -7,6 +7,7 @@
   * Daily Stickies Due now groups the stickies by project
   * Sticky Completion emails now list other stickies in the same group
   * When a viewing a project page, the menu now contains links to that project's templates and frames
+  * Deleting a sticky in a group now prompts the user to delete the single sticky, all following, or all stickies in the group
 
 * Bug Fix
   * Daily stickies due email fixed to include weekday for items past due
